pods/podlabel.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: backend
    version: v1
spec:
  containers:
  - name: my-container
    image: my-image:latest
