pods/networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
spec: 
  podSelector:
    matchLabels:
      app: backend 
  ingress: 
    - from: 
      - podSelector:
          matchLabels:
            app: frontend
